# agent-base-project

./: .env.example  .gitignore  BCRYPT_MIGRATION.md  CLAUDE.md  COOKIECUTTER_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  FORK_WORKFLOW.md  MANIFEST.in  Makefile  PERFORMANCE_OPTIMIZATION.md  PLANS_SYSTEM.md  QUICKSTART.md  RATE_LIMITING_SETUP.md  README.md  REVISION.md  api.http  pyproject.toml  requirements.txt  run.py  setup.py  sync_template.py  test_template.py  update_user_password.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
agents/basic/: agent.py  state.py
alembic/: env.py
cookiecutter-template/: README.md
cookiecutter-template/{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  alembic.ini  docker-compose.yml  requirements.txt
cookiecutter-template/{{cookiecutter.project_slug}}/src/: dependencies.py  main.py
cookiecutter-template/{{cookiecutter.project_slug}}/tests/: test_health.py  test_profiles.py  test_users.py
dinnovos_cli/: __init__.py  main.py
dinnovos_cli/cookiecutter-template/: cookiecutter.json
dinnovos_cli/cookiecutter-template/{{cookiecutter.project_slug}}/: .dockerignore  .env.example  Dockerfile  README.md  langgraph.json  (+4 more)
src/: dependencies.py  main.py
src/core/: config.py  logging.py  security.py
src/db/: checkpoint.py
src/models/: __init__.py  plan.py  profile.py  usage_log.py  user.py
src/routers/: auth.py  chatbot.py  profiles.py  users.py
src/schemas/: __init__.py  plan.py  usage_log.py  user.py
src/services/: auth_service.py  plan_service.py  usage_log_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_plans.py  test_token_security.py  test_users.py
(+27 files in other folders)
